--- a/src/app/main/dashboard/inbox/inbox.html
+++ b/src/app/main/dashboard/inbox/inbox.html
@@ -61,50 +61,38 @@
                                        data-toggle="dropdown"> Actions
                                         <i class="fa fa-angle-down"></i>
                                     </a>
-                                    <ul class="dropdown-menu pull-right">
-                                        <li>
-                                            <a href="javascript:;">
-                                                <i class="fa fa-pencil"></i> Edit </a>
-                                        </li>
-                                        <li>
-                                            <a href="javascript:;">
-                                                <i class="fa fa-trash-o"></i> Delete </a>
-                                        </li>
-                                        <li>
-                                            <a href="javascript:;">
-                                                <i class="fa fa-ban"></i> Ban </a>
-                                        </li>
-                                        <li class="divider"></li>
-                                        <li>
-                                            <a href="javascript:;"> Make admin </a>
-                                        </li>
-                                    </ul>
                                 </div>
                             </div>
                         </div>
                         <div class="portlet-body form">
-                            <div class="row">
-                                <div class="col-md-12" >
-
-                                    <div class="row">
-                                        <div class="col-md-2">
-                                                <img style="width: 70px;height: 70px;border-radius:70px!important" src="assets/images/prof1.jpg"/>
-
-
+                            <div class="row ">
+                                <div class=" col-xs-2 col-sm-2 col-md-2 ">
+                                    <img class="imgae-circle"
+                                         ng-src="../assets/images/prof1.jpg"/>
+                                </div>
+                                <div class="col-xs-7 col-sm-7 col-md-7">
+                                    <div class="row ">
+                                        <div class="col-md-12">
+                                                        <span><span class="profile-name">Priya Renjini</span>&nbsp;<span
+                                                                class="profile-id"> (PD12345)</span></span>
                                         </div>
-                                        <div class="col-md-7">
-                                            <div><span style="font-size:15px;font-weight: bold">Anu vincent</span> <span
-                                                    style="font-size: 13px">(PD12345)</span></div>
-                                            <div><span style="font-size:13px;line-height: 20px">25,5.3cms,Tamil,Hindu,Manal Tamilnadu, India</span></div>
+                                    </div>
+                                    <div class="row ">
+                                        <div class="col-md-12">
+                                                                        <span class="profile-details">
+                                                                            25,5.3cms,Tamil,Hindu,Manal Tamilnadu, India
+                                                                        </span>
+                                        </div>
+                                    </div>
+                                    <div class="row ">
+                                        <div class="col-md-12">
                                             <div style="margin-top:20px"><a style="font-size:13px;color: red;margin-right: 20px"> Send Interest</a><a style="font-size:13px;color: red"> View Profile</a></div>
-                                        </div>
-                                        <div class="col-md-3 " style="font-size: 9px;float:right
 
-                                        ">10 months ago
+                                            <hr/>
                                         </div>
                                     </div>
                                 </div>
-
+                                <div class="col-md-3 hidden-xs hidden-sm"></div>
                             </div>
 
 
@@ -126,29 +114,39 @@
                                        data-toggle="dropdown"> Actions
                                         <i class="fa fa-angle-down"></i>
                                     </a>
-                                    <ul class="dropdown-menu pull-right">
-                                        <li>
-                                            <a href="javascript:;">
-                                                <i class="fa fa-pencil"></i> Edit </a>
-                                        </li>
-                                        <li>
-                                            <a href="javascript:;">
-                                                <i class="fa fa-trash-o"></i> Delete </a>
-                                        </li>
-                                        <li>
-                                            <a href="javascript:;">
-                                                <i class="fa fa-ban"></i> Ban </a>
-                                        </li>
-                                        <li class="divider"></li>
-                                        <li>
-                                            <a href="javascript:;"> Make admin </a>
-                                        </li>
-                                    </ul>
                                 </div>
                             </div>
                         </div>
                         <div class="portlet-body form">
+                            <div class="row ">
+                                <div class=" col-xs-2 col-sm-2 col-md-2 ">
+                                    <img class="imgae-circle"
+                                         ng-src="../assets/images/prof1.jpg"/>
+                                </div>
+                                <div class="col-xs-7 col-sm-7 col-md-7">
+                                    <div class="row ">
+                                        <div class="col-md-12">
+                                                        <span><span class="profile-name">Priya Renjini</span>&nbsp;<span
+                                                                class="profile-id"> (PD12345)</span></span>
+                                        </div>
+                                    </div>
+                                    <div class="row ">
+                                        <div class="col-md-12">
+                                                                        <span class="profile-details">
+                                                                            25,5.3cms,Tamil,Hindu,Manal Tamilnadu, India
+                                                                        </span>
+                                        </div>
+                                    </div>
+                                    <div class="row ">
+                                        <div class="col-md-12">
+                                            <div style="margin-top:20px"><a style="font-size:13px;color: red;margin-right: 20px"> Send Interest</a><a style="font-size:13px;color: red"> View Profile</a></div>
 
+                                            <hr/>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-3 hidden-xs hidden-sm"></div>
+                            </div>
                         </div>
                     </div>
 
