--- a/src/app/core/layouts/dbLayout.html
+++ b/src/app/core/layouts/dbLayout.html
@@ -11,7 +11,7 @@
     </div>
     <div class="col-md-7">        <div ui-view="content"></div>
     </div>
-    <div class="col-md-2">        <div ui-view="navigation"></div>
+    <div class="col-md-2">        <div ui-view="dbNavigationRight"></div>
     </div>
 </div>
 
