--- a/src/app/main/login/login.css
+++ b/src/app/main/login/login.css
@@ -74,3 +74,8 @@
     margin-bottom: 25px;
 */
 }
+.settings-heading{
+    color:#00ac8d !important;
+    font-size:14pt!important;
+    font-weight: 300 !important;
+}
