--- a/src/app/main/settings/accountsettings/accountSettings.html
+++ b/src/app/main/settings/accountsettings/accountSettings.html
@@ -9,12 +9,12 @@
             <div class="row">
                 <div class="col-md-12 ">
                     <!-- BEGIN SAMPLE FORM PORTLET-->
-                    <div class="portlet light bordered">
+                    <div class="caption ">
+                        <span class="caption-subject bold uppercase settings-heading"> Account Settings</span>
+                    </div>
+                    <div class="portlet light bordered border-rounded">
                         <div class="portlet-title">
-                            <div class="caption font-red-sunglo">
-                                <i class="icon-settings font-red-sunglo"></i>
-                                <span class="caption-subject bold uppercase"> Account Settings</span>
-                            </div>
+
                             <div class="actions">
                                 <div class="btn-group">
                                     <a class="btn btn-sm green dropdown-toggle" href="javascript:;" data-toggle="dropdown"> Actions
