--- a/src/app/navigation/settings/settingNavigation.html
+++ b/src/app/navigation/settings/settingNavigation.html
@@ -1,11 +1,11 @@
-<div class="page-sidebar-wrapper">
-       <div class="page-sidebar navbar-collapse collapse" style="border-radius: 10px">
-                <ul class="page-sidebar-menu   " style="background-color: white" data-keep-expanded="false" data-auto-scroll="true" data-slide-speed="200">
+<div class="page-sidebar-wrapper ">
+       <div class="page-sidebar navbar-collapse collapse border-rounded" style="border-radius: 10px">
+                <ul class="page-sidebar-menu border-rounded   " style="background-color: white" data-keep-expanded="false" data-auto-scroll="true" data-slide-speed="200">
 
 
                     <li class="nav-item  active open">
                         <ul class="sub-menu settingnav" >
-                            <li style="background-color:#e8e6e8;height:37px;padding: 9px 14px 9px 30px;" class="nav-item " id="inbox">
+                            <li style="background-color:#f9fafc;height:37px;padding: 9px 14px 9px 30px;" class="nav-item " id="inbox">
                                     <span class="title"><b>Settings</b></span>
                             </li>
                             <li  ng-class="{ activateSettingNavBar: isActive('/settings')}" class="nav-item " id="inbox">
