dashboard style issue fixed

--- a/src/app/main/dashboard/dashboard.css
+++ b/src/app/main/dashboard/dashboard.css
@@ -1,16 +1,16 @@
-@media screen and (max-width: 981px) {
-    .page-content {
-        margin-left: 10px!important;
-    }
+/*@media screen and (max-width: 981px) {*/
+    /*.page-content {*/
+        /*margin-left: 10px!important;*/
+    /*}*/
 
 
-}
+/*}*/
 
-@media screen and (min-width: 800px) {
-    .page-content {
-        margin-left: 65px!important;
-    }
+/*@media screen and (min-width: 800px) {*/
+    /*.page-content {*/
+        /*margin-left: 65px!important;*/
+    /*}*/
 
 
-}
+/*}*/
 
