--- a/src/app/navigation/dashboard-right/dashBoardRight.html
+++ b/src/app/navigation/dashboard-right/dashBoardRight.html
@@ -1,5 +1,5 @@
 <div class="page-sidebar-wrapper section-background">
-    <div class="page-sidebar navbar-collapse collapse" style="border-radius: 10px">
+    <div class="page-sidebar navbar-collapse collapse" style="border-radius: 10px;margin-left:20px">
         <div class="row">
             <div class="col-md-12">
                 <ul class="page-sidebar-menu menu-panel   " data-keep-expanded="false"
