--- a/src/app/core/layouts/dbLayout.html
+++ b/src/app/core/layouts/dbLayout.html
@@ -1,25 +1,22 @@
 <div class="page-container-bg-solid page-header-fixed page-sidebar-closed-hide-logo">
 <div ui-view="toolbar"></div>
 <div class="clearfix"></div>
-
-<div class="page-container">
     <div class="row">
         <div class="col-md-1"></div>
-        <div class="col-md-10">
-<div class="row">
-    <div class="col-md-2">        <div ui-view="navigation"></div>
-    </div>
-    <div class="col-md-7">        <div ui-view="content"></div>
-    </div>
-    <div class="col-md-2">        <div ui-view="dbNavigationRight"></div>
-    </div>
-</div>
+        <div class="col-md-8">
+
+<div class="page-container">
+      <div ui-view="navigation"></div>
+          <div ui-view="content"></div>
+           <div ui-view="dbNavigationRight"></div>
+
 
         </div>
         <div class="col-md-1"></div>
 
     </div>
-
+</div>
+    </div>
 </div>
     <div class="clearfix"></div>
     <div class="" ui-view="footer"></div>
