--- a/src/app/toolbar/dashboard/dbToolbar.html
+++ b/src/app/toolbar/dashboard/dbToolbar.html
@@ -42,6 +42,13 @@
                             <li class="separator hide"></li>
                             <!-- BEGIN NOTIFICATION DROPDOWN -->
                             <!-- DOC: Apply "dropdown-dark" class after below "dropdown-extended" to change the dropdown styte -->
+                           <!-- <li class="dropdown dropdown-extended dropdown-notification dropdown-dark"
+                                >
+                                <a href="javascript:;" class="dropdown-toggle test1" data-toggle="dropdown" data-toggle="tooltip" data-placement="top" title="Hooray!"
+                                   data-hover="dropdown" data-close-others="true">
+                                    <i class="fa fa-bank "></i>
+                                </a>
+                            </li>-->
                             <li class="dropdown dropdown-extended dropdown-notification dropdown-dark"
                                 id="header_notification_bar">
                                 <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown"
