--- a/src/app/core/layouts/settingsLayout.html
+++ b/src/app/core/layouts/settingsLayout.html
@@ -1,23 +1,21 @@
 <div class="page-container-bg-solid page-header-fixed page-sidebar-closed-hide-logo">
     <div ui-view="toolbar"></div>
     <div class="clearfix"></div>
+    <div class="row">
+        <div class="col-md-1"></div>
+        <div class="col-md-10">
 
     <div class="page-container">
-        <div class="row">
-            <div class="col-md-1"></div>
-            <div class="col-md-10">
-                <div class="row">
-                    <div class="col-md-2">        <div ui-view="navigation"></div>
-                    </div>
-                    <div class="col-md-10">        <div ui-view="content"></div>
-                    </div>
+       <div ui-view="navigation"></div>
+                           <div ui-view="content"></div>
 
-                </div>
 
             </div>
-            <div class="col-md-1"></div>
+
 
         </div>
+        </div>
+    </div>
 
     </div>
     <div class="clearfix"></div>
