--- a/src/app/main/profile/managephotos/managePhoto.html
+++ b/src/app/main/profile/managephotos/managePhoto.html
@@ -1,6 +1,6 @@
 <div class="page-content-wrapper">
     <!-- BEGIN CONTENT BODY -->
-    <div class="page-content"style="margin-left:235px">
+    <div class="page-content">
         <!-- BEGIN PAGE HEAD-->
         <div class="page-head">
 
