profile  style issue fixed

--- a/src/app/navigation/profile/profileNavigation.html
+++ b/src/app/navigation/profile/profileNavigation.html
@@ -1,6 +1,6 @@
 <div class="page-sidebar-wrapper">
-    <div class="page-sidebar navbar-collapse collapse" style="border-radius: 10px">
-        <div style="background-color: white">
+    <div class="page-sidebar navbar-collapse collapse" style="border-radius: 10px;margin-top:10px">
+        <div style="background-color: white;">
             <div class="row">
                 <div class="col-md-12 " style="text-align:center;margin-top: 20px">
                     <img style="width: 100px;height: 130px;!important;" src="assets/images/prof1.jpg"/>
