--- a/src/app/toolbar/message/messagetoolbar.html
+++ b/src/app/toolbar/message/messagetoolbar.html
@@ -98,10 +98,10 @@
                  <!-- DOC: Remove "hide" class to enable the page header actions -->
                 <div class="main-heading-actions">
                     <ul  class="main-tool-link uppercase">
-                        <li><a ng-class="{ activetoolbar: isActive('/search')}" ui-sref="search">Inbox</a></li>
-                        <li><a ng-class="{ activetoolbar: isActive('/search/advanced')}" ui-sref="search.advanced">Sent all</a></li>
-                        <li><a ng-class="{ activetoolbar: isActive('/search/robo')}" ui-sref="search.robo">Chat</a></li>
-                        <li><a ng-class="{ activetoolbar: isActive('/search/searchbyId')}" ui-sref="search.searchbyId">Filtered</a></li>
+                        <li><a ng-class="{ activetoolbar: isActive('/messages')}" ui-sref="messages">Inbox</a></li>
+                        <li><a ng-class="{ activetoolbar: isActive('/messages/sentall')}" ui-sref="search.advanced">Sent all</a></li>
+                        <li><a ng-class="{ activetoolbar: isActive('/messages/chat')}" ui-sref="search.robo">Chat</a></li>
+                        <li><a ng-class="{ activetoolbar: isActive('/messages/filtered')}" ui-sref="search.searchbyId">Filtered</a></li>
                     </ul>
                 </div>
 
