--- a/src/app/navigation/message/inbox/inboxNavigation.html
+++ b/src/app/navigation/message/inbox/inboxNavigation.html
@@ -31,6 +31,27 @@
                                                     </ul>
                     </li>
                 </ul>
+
+           <ul class="page-sidebar-menu   " style="background-color: white" data-keep-expanded="false" data-auto-scroll="true" data-slide-speed="200">
+
+
+                    <li class="nav-item  active open">
+                        <ul class="sub-menu settingnav" >
+                            <li style="background-color:#e8e6e8;height:37px;padding: 9px 14px 9px 30px;" class="nav-item " id="inbox">
+                                    <span ><b>Search message by id</b></span>
+                            </li>
+                            <li class="nav-item " style="text-align: center">
+                                    <div class="input-group" style="width: 75%;margin: 25px; ">
+                                        <input type="text" class="form-control input-rounded-pratial-left" placeholder="Enter ID">
+                                                    <span class="input-group-btn">
+                                                        <button class="btn red input-rounded-pratial-right" type="button">Go</button>
+                                                    </span>
+                                    </div>
+
+                            </li>
+                                                                        </ul>
+                    </li>
+                </ul>
         <!-- END SIDEBAR MENU -->
     </div>
     <!-- END SIDEBAR -->
