--- a/src/app/navigation/message/sent/sentNavigation.html
+++ b/src/app/navigation/message/sent/sentNavigation.html
@@ -6,7 +6,7 @@
                     <li class="nav-item  active open">
                         <ul class="sub-menu settingnav" >
                             <li style="background-color:#e8e6e8;height:37px;padding: 9px 14px 9px 30px;" class="nav-item " >
-                                    <span class="title"><b>Settings</b></span>
+                                    <span class="title"><b>Sent all</b></span>
                             </li>
                             <li  ng-class="{ activateSettingNavBar: isActive('/settings')}" class="nav-item " >
                                 <a ui-sref="settings" class="nav-link ">
@@ -21,6 +21,26 @@
                         </ul>
                     </li>
                 </ul>
+           <ul class="page-sidebar-menu   " style="background-color: white" data-keep-expanded="false" data-auto-scroll="true" data-slide-speed="200">
+
+
+               <li class="nav-item  active open">
+                   <ul class="sub-menu settingnav" >
+                       <li style="background-color:#e8e6e8;height:37px;padding: 9px 14px 9px 30px;" class="nav-item " id="inbox">
+                           <span ><b>Search message by id</b></span>
+                       </li>
+                       <li class="nav-item " style="text-align: center">
+                           <div class="input-group" style="width: 75%;margin: 25px; ">
+                               <input type="text" class="form-control input-rounded-pratial-left" placeholder="Enter ID">
+                                                    <span class="input-group-btn">
+                                                        <button class="btn red input-rounded-pratial-right" type="button">Go</button>
+                                                    </span>
+                           </div>
+
+                       </li>
+                   </ul>
+               </li>
+           </ul>
         <!-- END SIDEBAR MENU -->
     </div>
     <!-- END SIDEBAR -->
