--- a/src/app/toolbar/message/messagetoolbar.html
+++ b/src/app/toolbar/message/messagetoolbar.html
@@ -99,7 +99,7 @@
                 <div class="main-heading-actions">
                     <ul  class="main-tool-link uppercase">
                         <li><a ng-class="{ activetoolbar: isActive('/messages')}" ui-sref="messages">Inbox</a></li>
-                        <li><a ng-class="{ activetoolbar: isActive('/messages/sentall')}" ui-sref="search.advanced">Sent all</a></li>
+                        <li><a ng-class="{ activetoolbar: isActive('/messages/sent')}" ui-sref="messages.sent">Sent all</a></li>
                         <li><a ng-class="{ activetoolbar: isActive('/messages/chat')}" ui-sref="search.robo">Chat</a></li>
                         <li><a ng-class="{ activetoolbar: isActive('/messages/filtered')}" ui-sref="search.searchbyId">Filtered</a></li>
                     </ul>
