--- a/src/app/toolbar/matches/matchestoolbar.html
+++ b/src/app/toolbar/matches/matchestoolbar.html
@@ -21,8 +21,8 @@
                 <div class="page-actions">
                     <ul class="tool-link">
                         <!--<li  ng-class="{ toolbarActive: isActive('/app')}"><a  ui-sref="app">MY HOME</a></li>-->
-                        <li ><a  ui-sref="profile">MY HOME</a></li>
-                        <li style="background-color: #00c29e"><a href="#news">MATCHES</a></li>
+                        <li ><a  ui-sref="app">MY HOME</a></li>
+                        <li style="background-color: #00c29e"><a ui-sref>MATCHES</a></li>
                         <li><a href="#contact">SEARCH</a></li>
                         <li><a href="#about">DAILY MATCHES</a></li>
                         <li ><a href="#about">MESSAGES</a></li>
