Matches page added

--- a/src/app/toolbar/matches/matchestoolbar.html
+++ b/src/app/toolbar/matches/matchestoolbar.html
@@ -22,7 +22,7 @@
                     <ul class="tool-link">
                         <!--<li  ng-class="{ toolbarActive: isActive('/app')}"><a  ui-sref="app">MY HOME</a></li>-->
                         <li ><a  ui-sref="app">MY HOME</a></li>
-                        <li style="background-color: #00c29e"><a ui-sref>MATCHES</a></li>
+                        <li style="background-color: #00c29e"><a ui-sref="matches">MATCHES</a></li>
                         <li><a href="#contact">SEARCH</a></li>
                         <li><a href="#about">DAILY MATCHES</a></li>
                         <li ><a href="#about">MESSAGES</a></li>
