--- a/src/app/toolbar/search/searchtoolbar.html
+++ b/src/app/toolbar/search/searchtoolbar.html
@@ -21,12 +21,12 @@
                 <div class="page-actions">
                     <ul class="tool-link">
                         <!--<li  ng-class="{ toolbarActive: isActive('/app')}"><a  ui-sref="app">MY HOME</a></li>-->
-                        <li ><a  ui-sref="profile">MY HOME</a></li>
-                        <li ><a href="#news">MATCHES</a></li>
-                        <li><a href="#contact">SEARCH</a></li>
+                        <li ><a  ui-sref="app">MY HOME</a></li>
+                        <li ><a ui-sref="matches">MATCHES</a></li>
+                        <li><a ui-sref="search">SEARCH</a></li>
                         <li><a href="#about">DAILY MATCHES</a></li>
-                        <li><a href="#about">MESSAGES</a></li>
-                        <li><a href="#about">HELP</a></li>
+                        <li><a ui-sref="messages">MESSAGES</a></li>
+                        <li><a ui-sref="settings">HELP</a></li>
                     </ul>
                 </div>
 
