--- a/src/app/toolbar/matches/matchestoolbar.html
+++ b/src/app/toolbar/matches/matchestoolbar.html
@@ -23,10 +23,10 @@
                         <!--<li  ng-class="{ toolbarActive: isActive('/app')}"><a  ui-sref="app">MY HOME</a></li>-->
                         <li ><a  ui-sref="app">MY HOME</a></li>
                         <li style="background-color: #00c29e"><a ui-sref="matches">MATCHES</a></li>
-                        <li><a href="#contact">SEARCH</a></li>
-                        <li><a href="#about">DAILY MATCHES</a></li>
-                        <li ><a href="#about">MESSAGES</a></li>
-                        <li><a href="#about">HELP</a></li>
+                        <li><a ui-sref="search">SEARCH</a></li>
+                        <li><a ui-sref="matches">DAILY MATCHES</a></li>
+                        <li ><a ui-sref="message">MESSAGES</a></li>
+                        <li><a ui-sref="settings">HELP</a></li>
                     </ul>
                 </div>
 
