--- a/src/app/toolbar/message/messagetoolbar.html
+++ b/src/app/toolbar/message/messagetoolbar.html
@@ -22,11 +22,11 @@
                     <ul class="tool-link">
                         <!--<li  ng-class="{ toolbarActive: isActive('/app')}"><a  ui-sref="app">MY HOME</a></li>-->
                         <li ><a  ui-sref="profile">MY HOME</a></li>
-                        <li ><a href="#news">MATCHES</a></li>
-                        <li><a href="#contact">SEARCH</a></li>
+                        <li ><a ui-sref="matches">MATCHES</a></li>
+                        <li><a ui-sref="search">SEARCH</a></li>
                         <li><a href="#about">DAILY MATCHES</a></li>
-                        <li style="background-color: #00c29e"><a href="#about">MESSAGES</a></li>
-                        <li><a href="#about">HELP</a></li>
+                        <li style="background-color: #00c29e"><a ui-sref="messages">MESSAGES</a></li>
+                        <li><a ui-sref="settings">HELP</a></li>
                     </ul>
                 </div>
 
