--- a/src/app/toolbar/profile/profileToolbar.html
+++ b/src/app/toolbar/profile/profileToolbar.html
@@ -21,10 +21,10 @@
                 <div class="page-actions">
                     <ul class="tool-link">
                         <li><a ui-sref="app">HOME</a></li>
-                        <li><a href="#contact">SEARCH</a></li>
-                        <li><a href="#about">MATCHES</a></li>
-                        <li><a href="#about">INBOX</a></li>
-                        <li><a href="#about">MORE</a></li>
+                        <li><a ui-sref="search">SEARCH</a></li>
+                        <li><a ui-sref="matches">MATCHES</a></li>
+                        <li><a ui-sref="messages">INBOX</a></li>
+                        <li><a ui-sref="settings">MORE</a></li>
                     </ul>
                 </div>
 
