--- a/src/app/toolbar/settings/settingsToolbar.html
+++ b/src/app/toolbar/settings/settingsToolbar.html
@@ -20,11 +20,11 @@
                 <div class="page-actions" >
                     <ul class="tool-link">
                         <!--<li  ng-class="{ toolbarActive: isActive('/app')}"><a  ui-sref="app">MY HOME</a></li>-->
-                        <li ><a  ui-sref="profile">HOME</a></li>
+                        <li ><a  ui-sref="app">HOME</a></li>
                         <li><a ui-sref="search">SEARCH</a></li>
-                        <li><a href="#about">MATCHES</a></li>
-                        <li><a href="#about">MESSAGES</a></li>
-                        <li><a href="#about">MORE</a></li>
+                        <li><a ui-sref="matches">MATCHES</a></li>
+                        <li><a ui-sref="messages">MESSAGES</a></li>
+                        <li><a ui-sref="settings">MORE</a></li>
                     </ul>
                 </div>
 
