search Results page added

--- a/src/app/main/search/advanced/advanced.html
+++ b/src/app/main/search/advanced/advanced.html
@@ -281,14 +281,14 @@
                                 <hr>
                                 <div class="form-group">
                                     <div class="col-md-offset-8">
-                                        <button type="button" class=" btn red input-rounded " ng-click="">
+                                        <a ui-sref="searchresult" type="button" class=" btn red input-rounded " ng-click="">
                                             Save & Search
-                                        </button>
+                                        </a>
 
-                                        <button type="button" class=" btn red input-rounded"
+                                        <a ui-sref="searchresult" type="button" class=" btn red input-rounded"
                                                 ng-click="">
                                             Search
-                                        </button>
+                                        </a>
                                     </div>
                                 </div>
 
