--- a/src/app/main/search/regular/regular.html
+++ b/src/app/main/search/regular/regular.html
@@ -286,10 +286,10 @@
                                         Save & Search
                                     </button>
 
-                                    <button type="button" class=" btn red input-rounded"
-                                            ng-click="">
+                                    <a ui-sref="searchresult" class=" btn red input-rounded"
+                                            >
                                         Search
-                                    </button>
+                                    </a>
                                 </div>
                             </div>
 
